fix(table) fix table fixed header layout bug

--- a/views/assets/stylesheets/scss/app/_table.scss
+++ b/views/assets/stylesheets/scss/app/_table.scss
@@ -229,10 +229,11 @@ table {
 }
 
 .qor-table-fixed-header {
-    thead {
+    > thead {
         position: fixed;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding-bottom: 0;
+        z-index: 20;
     }
 }
 
